--- a/all/src/index.html
+++ b/all/src/index.html
@@ -86,7 +86,7 @@
                                 <div>Салат фруктовий</div>
                             </div>
                             <div class="col-1 minuses-block">
-                                <i class="fa fa-minus-circle upsalad" aria-hidden="true"></i>
+                                <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                 <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                 <i class="fa fa-minus-circle" aria-hidden="true"></i>
                                 <i class="fa fa-minus-circle" aria-hidden="true"></i>
