--- a/app/with sidebar/src/index.html
+++ b/app/with sidebar/src/index.html
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -174,7 +174,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -187,9 +187,9 @@
                         <div class="col-2 sportmenu-images last-sportmenu">
                             <div class="container-fluid">
                                 <div class="row">
-                                    <div class="col-10 salat-na-snidanok">Салат на сніданок</div>
-                                    <div class="col-10 sportmenu-otstup"></div>
-                                    <div class="col-10 mt-auto"><i class="far fa-clock"></i> 45</div>
+                                    <div class="col-11 salat-na-snidanok">Салат на сніданок</div>
+                                    <div class="col-11 sportmenu-otstup"></div>
+                                    <div class="col-11 mt-auto"><i class="far fa-clock"></i> 45</div>
                                 </div>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -235,7 +235,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -258,7 +258,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -271,9 +271,9 @@
                         <div class="col-2 sportmenu-images last-sportmenu">
                             <div class="container-fluid">
                                 <div class="row">
-                                    <div class="col-10 salat-na-snidanok">Салат на сніданок</div>
-                                    <div class="col-10 sportmenu-otstup"></div>
-                                    <div class="col-10 mt-auto"><i class="far fa-clock"></i> 45</div>
+                                    <div class="col-11 salat-na-snidanok">Салат на сніданок</div>
+                                    <div class="col-11 sportmenu-otstup"></div>
+                                    <div class="col-11 mt-auto"><i class="far fa-clock"></i> 45</div>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -319,7 +319,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -342,7 +342,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -355,9 +355,9 @@
                         <div class="col-2 sportmenu-images last-sportmenu">
                             <div class="container-fluid">
                                 <div class="row">
-                                    <div class="col-10 salat-na-snidanok">Салат на сніданок</div>
-                                    <div class="col-10 sportmenu-otstup"></div>
-                                    <div class="col-10 mt-auto"><i class="far fa-clock"></i> 45</div>
+                                    <div class="col-11  salat-na-snidanok">Салат на сніданок</div>
+                                    <div class="col-11 sportmenu-otstup"></div>
+                                    <div class="col-11 mt-auto"><i class="far fa-clock"></i> 45</div>
                                 </div>
                             </div>
                         </div>
