--- a/app/without sidebar/src/index.html
+++ b/app/without sidebar/src/index.html
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -175,7 +175,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -198,7 +198,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -221,7 +221,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -251,7 +251,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -274,7 +274,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -297,7 +297,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -320,7 +320,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -343,7 +343,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu nex">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -373,7 +373,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -396,7 +396,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -419,7 +419,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -442,7 +442,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
@@ -465,7 +465,7 @@
                                 </div>
                                 <div class="col-5  ml-auto">
                                     <div class="row right-col-sportmenu">
-                                        <div class="col-7 sportmenu-ingridients"><p><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></p></div>
+                                        <div class="col-7 sportmenu-ingridients"><div><span class="font-weight-bold">Інградієнти:</span><br><div class="eggs">яйця: 2 шт листя шпинату тертий сир шинка</div></div></div>
                                         <div class="col-1 ml-auto sportmenu-plus"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
                                         <div class="col-12 sportmenu-otstup-stars"></div>
                                         <div class="col-12 sportmenu-preparing"><p><span class="font-weight-bold">Приготування:</span><br>Яйця збити виделкою в тарілці. Порізати шпинат та шинку, додати...</p></div>
