--- a/index.html
+++ b/index.html
@@ -2,15 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Document</title>
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+      }
+
+      main {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      ul {
+        font-size: 25px;
+
+        margin: 0;
+        padding: 0 0 200px 0;
+      }
+
+      a {
+        text-decoration: none;
+        color: black;
+      }
+
+      a:hover {
+        color: orange;
+      }
+
+      h1 {
+        color: darkcyan;
+      }
+    </style>
 </head>
 <body>
+<main>
+    <h1>Select page, please:</h1>
     <ul>
         <li><a href="./landing%20page/src/index.html">landing page</a></li>
         <li><a href="./app/with%20sidebar/src/index.html">user personal panel</a></li>
     </ul>
+</main>
 </body>
 </html>
