--- a/landing page/src/index.html
+++ b/landing page/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=990">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>foodle</title>
+    <title>Landing page</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
