--- a/app/with sidebar/src/index.html
+++ b/app/with sidebar/src/index.html
@@ -114,7 +114,7 @@
                         <div class="col-8">Сніданок<div class="lineunder"></div></div>
                         <div class="col-2 snidanok-time">7:00-10:30<div class="lineunder"></div></div>
                     </div>
-                    <div id="carouselExampleControls" class="carousel slide row" data-interval="7000" data-ride="carousel">
+                    <div id="carouselExampleControls" class="carousel slide row">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-block w-100" alt="First slide">                                 
@@ -382,7 +382,7 @@
                         <div class="col-8">Обід<div class="lineunder"></div></div>
                         <div class="col-3 snidanok-time">14:00-16:30<div class="lineunder"></div></div>
                     </div>
-                    <div id="carouselExampleControls1" class="carousel slide row carousel-margin" data-interval="10000" data-ride="carousel">
+                    <div id="carouselExampleControls1" class="carousel slide row carousel-margin">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100" alt="First slide">                                 
@@ -650,7 +650,7 @@
                         <div class="col-8">Вечеря<div class="lineunder"></div></div>
                         <div class="col-3 snidanok-time">17:30-19:30<div class="lineunder"></div></div>
                     </div>
-                    <div id="carouselExampleControls2" class="carousel slide row " data-ride="carousel">
+                    <div id="carouselExampleControls2" class="carousel slide row ">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100" alt="First slide">                                 
